--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "10.4.19",
+    "@tailwindcss/postcss": "^4.1.18",
+    "autoprefixer": "^10.4.19",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
-    "postcss": "8.4.38",
-    "tailwindcss": "3.4.4"
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4"
   }
 }
